# BambooEngine

./: CMakeLists.txt
SampleProjects/Qt-Example/Graphic-Qt/: log.txt
SampleProjects/Qt-Example/Graphic-Qt-build-desktop-Qt_in_PATH_Debug/: Graphic-Qt  Makefile  log.txt  moc_MainWindow.cpp  ui_MainWindow.h
SampleProjects/Qt-Example/Graphic-Qt-build-desktop-Qt_in_PATH_Release/: Graphic-Qt  Makefile  moc_MainWindow.cpp  ui_MainWindow.h
include/: CommonTypes.h  Graphic.h  INodeTranslator.h  IRenderTarget.h  ITransformable.h  RenderTarget_GlfwWindow.h  RenderTreeNode_DummyTriangle.h  Shader.h  ShaderManager.h  TextureManager.h
include/DeferredNodeTranslator/: Camera_RuleObject.h  Cube_RuleObject.h  DeferredNodeTranslator.h  Light_RuleObject.h  LoadedModel_RuleObject.h
include/DeferredNodeTranslator/RuleObjects/: Camera_RuleObject.h  Cube_RuleObject.h  Light_RuleObject.h  LoadedModel_RuleObject.h
include/RenderNodes/: RenderNode_Deferred.h
include/SceneObjects/: LoadedModel.h.orig
shaders/: generic1.fs
src/: AssimpWrapper.cpp  Core.cpp  Core.h  Geometry.h  Graphic.cpp  Graphic.cpp.orig  ISceneTreeNode.h  RenderNode.cpp  RenderTarget_GlfwWindow.cpp  RenderTreeNode_DummyTriangle.cpp  Shader.cpp  ShaderManager.cpp  TextureManager.cpp  main-rendering-test.cpp  main.cpp
src/DeferredNodeTranslator/: Camera_RuleObject.cpp  Cube_RuleObject.cpp  DeferredNodeTranslator.cpp  Light_RuleObject.cpp  LoadedModel_RuleObject.cpp
src/DeferredNodeTranslator/RenderNodes/: RenderNode_Deferred.cpp
src/Network/: CommandStreamHandler.cpp  CommandStreamHandler.h  INetworkConnectionHandler.h  NetworkServer.cpp  NetworkServer.h
src/Nodes/: JSONSerializer.cpp  nodes.cpp  nodes.h  nodesTest.cpp  variables.h
src/RenderNodes/: RenderNode_Deferred.cpp  RenderNode_FBO.cpp  RenderNode_Generic.cpp  RenderNode_PostEffect.cpp  RenderNode_SpotLight.cpp  RenderNode_SpotLight_Model.cpp
src/Rendering/: FBO.cpp  FBO.h  FboManager.cpp  FboManager.h  GLContext.h  IGLContext.h  PipelineState.h  PipelineStateManager.cpp  PipelineStateManager.h  RenderContext.h
src/Rendering/RenderTargets/: IRenderTarget_Texture.h  RenderTarget_FBO.cpp  RenderTarget_FBO.h  RenderTarget_GlfwWindow.cpp  RenderTarget_GlfwWindow.h  RenderTarget_PBuffer.cpp  RenderTarget_PBuffer.h
src/Rendering/RenderTree/: RenderTreeNode.cpp  RenderTreeNode.h  RenderTreeNode_DummyCube.cpp  RenderTreeNode_DummyCube.h  RenderTreeNode_DummyTriangle.cpp
src/Ressources/: IRessource.h
src/test2/: mainTest.cpp
src/utils/: Config.cpp  Config.h  Logger.cpp  Logger.h  ModernJSON.h  Profiler.cpp  Profiler.h  optional.h
tests/: TestNodes.cpp  TestNodes_basics.cpp  testgtest.cpp
vs-prototype-build/BambooEngine/: BambooEngine.sln
vs-prototype-build/BambooEngine/BambooEngine/: BambooEngine.vcxproj
